CutFlowAnalyzer/scripts/forJpsi/SBATCHLOG/SBATCH_Charmonium_H.stderr
Info in <TUnixSystem::ACLiC>: creating shared library /fdata/scratch/dildick/DisplacedMuonJetAnalysis_2016/CMSSW_8_0_20/src/MuJetAnalysis/CutFlowAnalyzer/scripts/forJpsi/./jpsiScriptsSD_C.so
Warning in <ACLiC>: Failed to generate the dependency file for /fdata/scratch/dildick/DisplacedMuonJetAnalysis_2016/CMSSW_8_0_20/src/MuJetAnalysis/CutFlowAnalyzer/scripts/forJpsi/./jpsiScriptsSD_C.so
Error in <ACLiC>: Dictionary generation failed!
input_line_10:2:3: error: use of undeclared identifier 'analysis'
 (analysis("Charmonium_H"))
  ^
